# pironman5-mini

./: MANIFEST.in  README.md  install.py  pyproject.toml
docs/source/: assembly_instructions.rst  conf.py  index.rst
docs/source/advanced/: advanced.rst  fans.rst  io_board.rst
docs/source/control/: control_pironman5.rst  control_with dashboard.rst  control_with_commands.rst
docs/source/install/: copy_sd_to_nvme_rpi.rst  install_raspberry_os.rst  install_the_os.rst  install_to_nvme_batocera.rst  install_to_nvme_other_os.rst  install_to_nvme_rpi.rst  install_to_sd_rpi.rst
docs/source/set_up/: set_up_batocera.rst  set_up_home_assistant.rst  set_up_pironman5.rst  set_up_rpi_os.rst
pironman5_mini/: __init__.py  config.json  pironman5_mini.py
pironman_5_mini/: __init__.py  pironman_5_mini.py
pironman_mini/: __init__.py  pironman_mini.py
tools/: sf_installer.py
