[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pironman5_mini"
authors = [
  { name="SunFounder", email="service@sunfounder.com" },
]
description = "Library for monitoring Raspberry Pi system status"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU License",
  "Operating System :: OS Independent",
]
dynamic = ["version"]

dependencies = [
  'smbus2',
  'psutil',
  'influxdb',
  'adafruit-circuitpython-neopixel-spi',
]

[project.scripts]
pironman5-mini-service = "pironman5_mini:main"

[tool.setuptools]
packages = ["pironman5_mini"]

[project.urls]
"Homepage" = "https://github.com/sunfounder/pironman5-mini"
"Bug Tracker" = "https://github.com/sunfounder/pironman5-mini/issues"

[tool.setuptools.dynamic]
version = {attr = "pironman5_mini.__version__"}